Primal Crusher and Refinement (I want to die)

--- a/src/main/resources/assets/thaumcraft/lang/de_de.json
+++ b/src/main/resources/assets/thaumcraft/lang/de_de.json
@@ -43,14 +43,14 @@
   "item.thaumcraft.nugget.brass": "Alchemielegierungsnugget",
   "item.thaumcraft.nugget.quartz": "Quarzsplitter",
   "item.thaumcraft.nugget.rareearth": "Seltene Erden",
-  "item.thaumcraft.cluster.iron": "Nativer Eisenklumpen",
-  "item.thaumcraft.cluster.copper": "Nativer Kupferklumpen",
-  "item.thaumcraft.cluster.tin": "Nativer Zinnklumpen",
-  "item.thaumcraft.cluster.silver": "Nativer Silberklumpen",
-  "item.thaumcraft.cluster.lead": "Nativer Bleiklumpen",
-  "item.thaumcraft.cluster.cinnabar": "Nativer Zinnoberklumpen",
-  "item.thaumcraft.cluster.gold": "Nativer Goldklumpen",
-  "item.thaumcraft.cluster.quartz": "Nativer Quarzklumpen",
+  "item.thaumcraft.cluster_iron": "Nativer Eisenklumpen",
+  "item.thaumcraft.cluster_copper": "Nativer Kupferklumpen",
+  "item.thaumcraft.cluster_tin": "Nativer Zinnklumpen",
+  "item.thaumcraft.cluster_silver": "Nativer Silberklumpen",
+  "item.thaumcraft.cluster_lead": "Nativer Bleiklumpen",
+  "item.thaumcraft.cluster_cinnabar": "Nativer Zinnoberklumpen",
+  "item.thaumcraft.cluster_gold": "Nativer Goldklumpen",
+  "item.thaumcraft.cluster_quartz": "Nativer Quarzklumpen",
   "item.thaumcraft.filter": "Essentiafilter",
   "item.thaumcraft.morphic_resonator": "Morphresonator",
   "item.thaumcraft.tallow": "Magischer Talg",
