--- a/src/main/resources/assets/thaumcraft/lang/en_us.json
+++ b/src/main/resources/assets/thaumcraft/lang/en_us.json
@@ -57,14 +57,14 @@
   "item.thaumcraft.nugget.brass": "Alchemical Brass Nugget",
   "item.thaumcraft.nugget.quartz": "Quartz Sliver",
   "item.thaumcraft.nugget.rareearth": "Rare Earths",
-  "item.thaumcraft.cluster.iron": "Native Iron Cluster",
-  "item.thaumcraft.cluster.copper": "Native Copper Cluster",
-  "item.thaumcraft.cluster.tin": "Native Tin Cluster",
-  "item.thaumcraft.cluster.silver": "Native Silver Cluster",
-  "item.thaumcraft.cluster.lead": "Native Lead Cluster",
-  "item.thaumcraft.cluster.cinnabar": "Native Cinnabar Cluster   ",
-  "item.thaumcraft.cluster.gold": "Native Gold Cluster",
-  "item.thaumcraft.cluster.quartz": "Native Quartz Cluster",
+  "item.thaumcraft.cluster_iron": "Native Iron Cluster",
+  "item.thaumcraft.cluster_copper": "Native Copper Cluster",
+  "item.thaumcraft.cluster_tin": "Native Tin Cluster",
+  "item.thaumcraft.cluster_silver": "Native Silver Cluster",
+  "item.thaumcraft.cluster_lead": "Native Lead Cluster",
+  "item.thaumcraft.cluster_cinnabar": "Native Cinnabar Cluster   ",
+  "item.thaumcraft.cluster_gold": "Native Gold Cluster",
+  "item.thaumcraft.cluster_quartz": "Native Quartz Cluster",
   "item.thaumcraft.filter": "Essentia Filter",
   "item.thaumcraft.morphic_resonator": "Morphic Resonator",
   "item.thaumcraft.tallow": "Magic Tallow",
