--- a/src/main/resources/assets/thaumcraft/lang/fr_fr.json
+++ b/src/main/resources/assets/thaumcraft/lang/fr_fr.json
@@ -57,14 +57,14 @@
   "item.thaumcraft.nugget.brass": "Pépite de laiton alchimique",
   "item.thaumcraft.nugget.quartz": "Éclat de quartz",
   "item.thaumcraft.nugget.rareearth": "Terres rares",
-  "item.thaumcraft.cluster.iron": "Aglomérat de fer natif",
-  "item.thaumcraft.cluster.copper": "Aglomérat de cuivre natif",
-  "item.thaumcraft.cluster.tin": "Aglomérat d'étain natif",
-  "item.thaumcraft.cluster.silver": "Aglomérat d'argent natif",
-  "item.thaumcraft.cluster.lead": "Aglomérat de plomb natif",
-  "item.thaumcraft.cluster.cinnabar": "Aglomérat de cinabre natif",
-  "item.thaumcraft.cluster.gold": "Aglomérat d'or natif",
-  "item.thaumcraft.cluster.quartz": "Aglomérat de quartz natif",
+  "item.thaumcraft.cluster_iron": "Aglomérat de fer natif",
+  "item.thaumcraft.cluster_copper": "Aglomérat de cuivre natif",
+  "item.thaumcraft.cluster_tin": "Aglomérat d'étain natif",
+  "item.thaumcraft.cluster_silver": "Aglomérat d'argent natif",
+  "item.thaumcraft.cluster_lead": "Aglomérat de plomb natif",
+  "item.thaumcraft.cluster_cinnabar": "Aglomérat de cinabre natif",
+  "item.thaumcraft.cluster_gold": "Aglomérat d'or natif",
+  "item.thaumcraft.cluster_quartz": "Aglomérat de quartz natif",
   "item.thaumcraft.filter": "Filtre d'essentia",
   "item.thaumcraft.morphic_resonator": "Résonateur morphique",
   "item.thaumcraft.tallow": "Suif magique",
