--- a/src/main/resources/assets/thaumcraft/lang/ja_jp.json
+++ b/src/main/resources/assets/thaumcraft/lang/ja_jp.json
@@ -57,14 +57,14 @@
   "item.thaumcraft.nugget.brass": "錬金真鍮塊",
   "item.thaumcraft.nugget.quartz": "水晶片",
   "item.thaumcraft.nugget.rareearth": "レアアース",
-  "item.thaumcraft.cluster.iron": "自然鉄クラスター",
-  "item.thaumcraft.cluster.copper": "自然銅クラスター",
-  "item.thaumcraft.cluster.tin": "自然錫クラスター",
-  "item.thaumcraft.cluster.silver": "自然銀クラスター",
-  "item.thaumcraft.cluster.lead": "自然鉛クラスター",
-  "item.thaumcraft.cluster.cinnabar": "自然辰砂クラスター",
-  "item.thaumcraft.cluster.gold": "自然金クラスター",
-  "item.thaumcraft.cluster.quartz": "自然水晶クラスター",
+  "item.thaumcraft.cluster_iron": "自然鉄クラスター",
+  "item.thaumcraft.cluster_copper": "自然銅クラスター",
+  "item.thaumcraft.cluster_tin": "自然錫クラスター",
+  "item.thaumcraft.cluster_silver": "自然銀クラスター",
+  "item.thaumcraft.cluster_lead": "自然鉛クラスター",
+  "item.thaumcraft.cluster_cinnabar": "自然辰砂クラスター",
+  "item.thaumcraft.cluster_gold": "自然金クラスター",
+  "item.thaumcraft.cluster_quartz": "自然水晶クラスター",
   "item.thaumcraft.filter": "エッセンシアフィルター",
   "item.thaumcraft.morphic_resonator": "形態共鳴器",
   "item.thaumcraft.tallow": "魔法の獣脂",
