--- a/src/main/resources/assets/thaumcraft/lang/ko_kr.json
+++ b/src/main/resources/assets/thaumcraft/lang/ko_kr.json
@@ -57,14 +57,14 @@
   "item.thaumcraft.nugget.brass": "연금 황동 조각",
   "item.thaumcraft.nugget.quartz": "석영 조각",
   "item.thaumcraft.nugget.rareearth": "희토류",
-  "item.thaumcraft.cluster.iron": "천연 철 덩어리",
-  "item.thaumcraft.cluster.copper": "천연 구리 덩어리",
-  "item.thaumcraft.cluster.tin": "천연 주석 덩어리",
-  "item.thaumcraft.cluster.silver": "천연 은 덩어리",
-  "item.thaumcraft.cluster.lead": "천연 납 덩어리",
-  "item.thaumcraft.cluster.cinnabar": "천연 진사 덩어리",
-  "item.thaumcraft.cluster.gold": "천연 금 덩어리",
-  "item.thaumcraft.cluster.quartz": "천연 석영 덩어리",
+  "item.thaumcraft.cluster_iron": "천연 철 덩어리",
+  "item.thaumcraft.cluster_copper": "천연 구리 덩어리",
+  "item.thaumcraft.cluster_tin": "천연 주석 덩어리",
+  "item.thaumcraft.cluster_silver": "천연 은 덩어리",
+  "item.thaumcraft.cluster_lead": "천연 납 덩어리",
+  "item.thaumcraft.cluster_cinnabar": "천연 진사 덩어리",
+  "item.thaumcraft.cluster_gold": "천연 금 덩어리",
+  "item.thaumcraft.cluster_quartz": "천연 석영 덩어리",
   "item.thaumcraft.filter": "에센시아 필터",
   "item.thaumcraft.morphic_resonator": "유동성 공명기",
   "item.thaumcraft.tallow": "마법 수지",
