--- a/src/main/resources/assets/thaumcraft/lang/nl_NL.json
+++ b/src/main/resources/assets/thaumcraft/lang/nl_NL.json
@@ -57,14 +57,14 @@
   "item.thaumcraft.nugget.brass": "Messing Klompje",
   "item.thaumcraft.nugget.quartz": "Kwarts Splinter",
   "item.thaumcraft.nugget.rareearth": "Zeldzame Aarde",
-  "item.thaumcraft.cluster.iron": "Inheems IJzeren Kluster",
-  "item.thaumcraft.cluster.copper": "Inheems Koperen Kluster",
-  "item.thaumcraft.cluster.tin": "Inheems Tinnen Kluster",
-  "item.thaumcraft.cluster.silver": "Inheems Zilveren Kluster",
-  "item.thaumcraft.cluster.lead": "Inheems Loden Kluster",
-  "item.thaumcraft.cluster.cinnabar": "Inheems Cinnaberen Kluster   ",
-  "item.thaumcraft.cluster.gold": "Inheems Gouden Kluster",
-  "item.thaumcraft.cluster.quartz": "Inheems Kwartsen Kluster",
+  "item.thaumcraft.cluster_iron": "Inheems IJzeren Kluster",
+  "item.thaumcraft.cluster_copper": "Inheems Koperen Kluster",
+  "item.thaumcraft.cluster_tin": "Inheems Tinnen Kluster",
+  "item.thaumcraft.cluster_silver": "Inheems Zilveren Kluster",
+  "item.thaumcraft.cluster_lead": "Inheems Loden Kluster",
+  "item.thaumcraft.cluster_cinnabar": "Inheems Cinnaberen Kluster   ",
+  "item.thaumcraft.cluster_gold": "Inheems Gouden Kluster",
+  "item.thaumcraft.cluster_quartz": "Inheems Kwartsen Kluster",
   "item.thaumcraft.filter": "Essentia Filter",
   "item.thaumcraft.morphic_resonator": "Morphigenetische Resonator",
   "item.thaumcraft.tallow": "Magisch Vet",
