--- a/src/main/resources/assets/thaumcraft/lang/ru_ru.json
+++ b/src/main/resources/assets/thaumcraft/lang/ru_ru.json
@@ -57,14 +57,14 @@
   "item.thaumcraft.nugget.brass": "Кусочек алхимической латуни",
   "item.thaumcraft.nugget.quartz": "Кварцевый осколок",
   "item.thaumcraft.nugget.rareearth": "Кусочек редкоземельного элемента",
-  "item.thaumcraft.cluster.iron": "Самородный кластер железа",
-  "item.thaumcraft.cluster.copper": "Самородный кластер меди",
-  "item.thaumcraft.cluster.tin": "Самородный кластер олова",
-  "item.thaumcraft.cluster.silver": "Самородный кластер серебра",
-  "item.thaumcraft.cluster.lead": "Самородный кластер свинца",
-  "item.thaumcraft.cluster.cinnabar": "Самородный кластер киновари",
-  "item.thaumcraft.cluster.gold": "Самородный кластер золота",
-  "item.thaumcraft.cluster.quartz": "Самородный кластер кварца",
+  "item.thaumcraft.cluster_iron": "Самородный кластер железа",
+  "item.thaumcraft.cluster_copper": "Самородный кластер меди",
+  "item.thaumcraft.cluster_tin": "Самородный кластер олова",
+  "item.thaumcraft.cluster_silver": "Самородный кластер серебра",
+  "item.thaumcraft.cluster_lead": "Самородный кластер свинца",
+  "item.thaumcraft.cluster_cinnabar": "Самородный кластер киновари",
+  "item.thaumcraft.cluster_gold": "Самородный кластер золота",
+  "item.thaumcraft.cluster_quartz": "Самородный кластер кварца",
   "item.thaumcraft.filter": "Фильтр эссенций",
   "item.thaumcraft.morphic_resonator": "Морфический резонатор",
   "item.thaumcraft.tallow": "Магический жир",
