--- a/src/main/resources/assets/thaumcraft/lang/zh_cn.json
+++ b/src/main/resources/assets/thaumcraft/lang/zh_cn.json
@@ -57,14 +57,14 @@
   "item.thaumcraft.nugget.brass": "炼金黄铜粒",
   "item.thaumcraft.nugget.quartz": "石英碎片",
   "item.thaumcraft.nugget.rareearth": "稀土",
-  "item.thaumcraft.cluster.iron": "铁原矿簇",
-  "item.thaumcraft.cluster.copper": "铜原矿簇",
-  "item.thaumcraft.cluster.tin": "锡原矿簇",
-  "item.thaumcraft.cluster.silver": "银原矿簇",
-  "item.thaumcraft.cluster.lead": "铅原矿簇",
-  "item.thaumcraft.cluster.cinnabar": "朱砂原矿簇",
-  "item.thaumcraft.cluster.gold": "金原矿簇",
-  "item.thaumcraft.cluster.quartz": "石英原矿簇",
+  "item.thaumcraft.cluster_iron": "铁原矿簇",
+  "item.thaumcraft.cluster_copper": "铜原矿簇",
+  "item.thaumcraft.cluster_tin": "锡原矿簇",
+  "item.thaumcraft.cluster_silver": "银原矿簇",
+  "item.thaumcraft.cluster_lead": "铅原矿簇",
+  "item.thaumcraft.cluster_cinnabar": "朱砂原矿簇",
+  "item.thaumcraft.cluster_gold": "金原矿簇",
+  "item.thaumcraft.cluster_quartz": "石英原矿簇",
   "item.thaumcraft.filter": "源质滤管",
   "item.thaumcraft.morphic_resonator": "形态谐振器",
   "item.thaumcraft.tallow": "魔力油脂",
