--- a/src/main/resources/assets/thaumcraft/lang/zh_tw.json
+++ b/src/main/resources/assets/thaumcraft/lang/zh_tw.json
@@ -57,14 +57,14 @@
   "item.thaumcraft.nugget.brass": "煉成黃銅粒",
   "item.thaumcraft.nugget.quartz": "石英碎片",
   "item.thaumcraft.nugget.rareearth": "稀土礦粒",
-  "item.thaumcraft.cluster.iron": "原生鐵礦簇",
-  "item.thaumcraft.cluster.copper": "原生銅礦簇",
-  "item.thaumcraft.cluster.tin": "原生錫礦簇",
-  "item.thaumcraft.cluster.silver": "原生銀礦簇",
-  "item.thaumcraft.cluster.lead": "原生鉛礦簇",
-  "item.thaumcraft.cluster.cinnabar": "原生硃砂礦簇",
-  "item.thaumcraft.cluster.gold": "原生金礦簇",
-  "item.thaumcraft.cluster.quartz": "原生石英礦簇",
+  "item.thaumcraft.cluster_iron": "原生鐵礦簇",
+  "item.thaumcraft.cluster_copper": "原生銅礦簇",
+  "item.thaumcraft.cluster_tin": "原生錫礦簇",
+  "item.thaumcraft.cluster_silver": "原生銀礦簇",
+  "item.thaumcraft.cluster_lead": "原生鉛礦簇",
+  "item.thaumcraft.cluster_cinnabar": "原生硃砂礦簇",
+  "item.thaumcraft.cluster_gold": "原生金礦簇",
+  "item.thaumcraft.cluster_quartz": "原生石英礦簇",
   "item.thaumcraft.filter": "源質濾管",
   "item.thaumcraft.morphic_resonator": "波動共鳴器",
   "item.thaumcraft.tallow": "魔力肉脂",
