Essentia phials and jars (without fancy rendering)

--- a/src/main/resources/assets/thaumcraft/lang/de_de.json
+++ b/src/main/resources/assets/thaumcraft/lang/de_de.json
@@ -81,8 +81,8 @@
   "item.thaumcraft.chunk.mutton": "Schafsnugget",
   "item.thaumcraft.brain": "Zombiehirn",
   "item.thaumcraft.triple_meat_treat": "Dreifacher Fleischgenuss",
-  "item.thaumcraft.phial.empty": "Glasphiole",
-  "item.thaumcraft.phial.filled": "Essentiaphiole",
+  "item.thaumcraft.phial_empty": "Glasphiole",
+  "item.thaumcraft.phial_full": "Essentiaphiole",
   "item.thaumcraft.label.blank": "Leeres Schildchen",
   "item.thaumcraft.label.filled": "Markiertes Schildchen",
   "item.thaumcraft.jar_brace": "Legierungsdeckelklammer",
