--- a/src/main/resources/assets/thaumcraft/lang/en_us.json
+++ b/src/main/resources/assets/thaumcraft/lang/en_us.json
@@ -94,8 +94,8 @@
   "item.thaumcraft.chunk.mutton": "Mutton Nugget",
   "item.thaumcraft.brain": "Zombie Brain",
   "item.thaumcraft.triple_meat_treat": "Triple Meat Treat",
-  "item.thaumcraft.phial.empty": "Glass Phial",
-  "item.thaumcraft.phial.filled": "Phial of %s Essentia",
+  "item.thaumcraft.phial_empty": "Glass Phial",
+  "item.thaumcraft.phial_full": "Phial of %s Essentia",
   "item.thaumcraft.label.blank": "Blank Label",
   "item.thaumcraft.label.filled": "Marked Label",
   "item.thaumcraft.jar_brace": "Brass Lid Brace",
