--- a/src/main/resources/assets/thaumcraft/lang/fr_fr.json
+++ b/src/main/resources/assets/thaumcraft/lang/fr_fr.json
@@ -94,8 +94,8 @@
   "item.thaumcraft.chunk.mutton": "Morceau de mouton",
   "item.thaumcraft.brain": "Cervelle de zombie",
   "item.thaumcraft.triple_meat_treat": "Régal aux trois viandes",
-  "item.thaumcraft.phial.empty": "Fiole",
-  "item.thaumcraft.phial.filled": "Fiole d'essentia %s",
+  "item.thaumcraft.phial_empty": "Fiole",
+  "item.thaumcraft.phial_full": "Fiole d'essentia %s",
   "item.thaumcraft.label.blank": "Étiquette vierge",
   "item.thaumcraft.label.filled": "Étiquette marquée",
   "item.thaumcraft.jar_brace": "Atelle de couvercle en laiton",
