--- a/src/main/resources/assets/thaumcraft/lang/ja_jp.json
+++ b/src/main/resources/assets/thaumcraft/lang/ja_jp.json
@@ -94,8 +94,8 @@
   "item.thaumcraft.chunk.mutton": "マトンナゲット",
   "item.thaumcraft.brain": "ゾンビの脳",
   "item.thaumcraft.triple_meat_treat": "トリプル・ミート・トリート",
-  "item.thaumcraft.phial.empty": "薬瓶",
-  "item.thaumcraft.phial.filled": "%sのエッセンシア瓶",
+  "item.thaumcraft.phial_empty": "薬瓶",
+  "item.thaumcraft.phial_full": "%sのエッセンシア瓶",
   "item.thaumcraft.label.blank": "白紙のラベル",
   "item.thaumcraft.label.filled": "相ラベル",
   "item.thaumcraft.jar_brace": "真鍮のねじ蓋",
