--- a/src/main/resources/assets/thaumcraft/lang/ko_kr.json
+++ b/src/main/resources/assets/thaumcraft/lang/ko_kr.json
@@ -94,8 +94,8 @@
   "item.thaumcraft.chunk.mutton": "양고기 조각",
   "item.thaumcraft.brain": "좀비 뇌",
   "item.thaumcraft.triple_meat_treat": "고기 혼합물",
-  "item.thaumcraft.phial.empty": "유리 용기",
-  "item.thaumcraft.phial.filled": "%s 에센시아 용기",
+  "item.thaumcraft.phial_empty": "유리 용기",
+  "item.thaumcraft.phial_full": "%s 에센시아 용기",
   "item.thaumcraft.label.blank": "빈 라벨",
   "item.thaumcraft.label.filled": "표기된 라벨",
   "item.thaumcraft.jar_brace": "황동 뚜껑 받침대",
