--- a/src/main/resources/assets/thaumcraft/lang/nl_NL.json
+++ b/src/main/resources/assets/thaumcraft/lang/nl_NL.json
@@ -94,8 +94,8 @@
   "item.thaumcraft.chunk.mutton": "Schapenvleesnugget",
   "item.thaumcraft.brain": "Zombie-Brein",
   "item.thaumcraft.triple_meat_treat": "Driedubbel Vlees-Snoepje",
-  "item.thaumcraft.phial.empty": "Glazen Flacon",
-  "item.thaumcraft.phial.filled": "Flacon met Essentia",
+  "item.thaumcraft.phial_empty": "Glazen Flacon",
+  "item.thaumcraft.phial_full": "Flacon met Essentia",
   "item.thaumcraft.label.blank": "Leeg Label",
   "item.thaumcraft.label.filled": "Ingevuld Label",
   "item.thaumcraft.jar_brace": "Messingen Beugeldop",
