--- a/src/main/resources/assets/thaumcraft/lang/ru_ru.json
+++ b/src/main/resources/assets/thaumcraft/lang/ru_ru.json
@@ -94,8 +94,8 @@
   "item.thaumcraft.chunk.mutton": "Кусочек баранины",
   "item.thaumcraft.brain": "Мозг зомби",
   "item.thaumcraft.triple_meat_treat": "Лакомство из тройного мяса",
-  "item.thaumcraft.phial.empty": "Стеклянный пузырёк",
-  "item.thaumcraft.phial.filled": "Пузырёк с эссенцией %s",
+  "item.thaumcraft.phial_empty": "Стеклянный пузырёк",
+  "item.thaumcraft.phial_full": "Пузырёк с эссенцией %s",
   "item.thaumcraft.label.blank": "Пустая бирка",
   "item.thaumcraft.label.filled": "Помеченная бирка",
   "item.thaumcraft.jar_brace": "Латунная крышка",
