--- a/src/main/resources/assets/thaumcraft/lang/zh_cn.json
+++ b/src/main/resources/assets/thaumcraft/lang/zh_cn.json
@@ -94,8 +94,8 @@
   "item.thaumcraft.chunk.mutton": "羊肉粒",
   "item.thaumcraft.brain": "僵尸之脑",
   "item.thaumcraft.triple_meat_treat": "三层肉饼",
-  "item.thaumcraft.phial.empty": "玻璃安瓿",
-  "item.thaumcraft.phial.filled": "%s 源质安瓿",
+  "item.thaumcraft.phial_empty": "玻璃安瓿",
+  "item.thaumcraft.phial_full": "%s 源质安瓿",
   "item.thaumcraft.label.blank": "空白标签",
   "item.thaumcraft.label.filled": "标记标签",
   "item.thaumcraft.jar_brace": "黄铜盖箍",
