--- a/src/main/resources/assets/thaumcraft/lang/zh_tw.json
+++ b/src/main/resources/assets/thaumcraft/lang/zh_tw.json
@@ -94,8 +94,8 @@
   "item.thaumcraft.chunk.mutton": "羊肉塊",
   "item.thaumcraft.brain": "殭屍腦袋",
   "item.thaumcraft.triple_meat_treat": "三層肉饌",
-  "item.thaumcraft.phial.empty": "玻璃管型瓶",
-  "item.thaumcraft.phial.filled": "%s 源質管型瓶",
+  "item.thaumcraft.phial_empty": "玻璃管型瓶",
+  "item.thaumcraft.phial_full": "%s 源質管型瓶",
   "item.thaumcraft.label.blank": "空白標籤",
   "item.thaumcraft.label.filled": "標記標籤",
   "item.thaumcraft.jar_brace": "黃銅蓋箍",
